1.9.134

Increase speed of D-efficiencies calculation
Make openmp enabled version of Doptimize

1.9.102

Automatically convert Eigen::MatrixXd to numpy in Python interface
Fix D-efficiency for mixed-level arrays
Add matlab interface to D-optimization
Add PEC-sequence 
Add commands to compile mex files with Octave and Matlab
Add doxygen documentation to SWIG interfaces
Update unittest with PECsequence
Update OApackage manual
Added __array_interface__ to array_link object

1.9.88

Improve build system
Add optimization of mixed-level arrays


1.9.81

Make command output compatible with ipython

1.9.80

Upload to Python Package Index
Binary wheels from appveyor

1.9.61

Remove dependency on Boost
Update Python package according to packaging guidelines
Updated numpy.i
Make code compile with Win64 again
Cleared code warnings detected with CLANG
Added big integer class to deal with extremely large symmetry groups
Added check on overflow of symmetry group size
Added reduceDOP method to aray_link, added to unit test
Added msstdint.h to deal with older versions of Visual Studio
Added random initialization of arrays
Implemented second order model matrix for mixed-level arrays
Implemented Defficiencies for mixed-level arrays


1.9.15

Fix bug in oaanalye for jj=4
Fix element access of an array in Python again
Added clone() method to array_link
Added Ds-efficiency
Work on D-optimal arrays in Python code
Update documentation
Prepare code for interface to R


1.9.14

Make openmp work better in depth_extend_hybrid

1.9.13

Changed output of oa_depth_extend to be more compact
Added 2-level algorithm to oaunittest
Improve speed of 2-level algorithm

1.9.12

Added depth_extend_hybrid
Added reduction.initStatic() to extend function

1.9.11

Fix issue with progress printing in depth_extend_direct

1.9.10

Create special column comparison function for 2-level arrays
Restructure J5-order code
Make code thread safe
Implement OPENMP mode for oa_depth_extend