@@ -2,6 +2,7 @@
 
 Increase speed of D-efficiencies calculation
 Make openmp enabled version of Doptimize
+Increase speed of array2eigenModelMatrix
 
 1.9.102
 
